--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -1,5 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh; /* This ensures that the container takes up at least the full viewport height */
+    background-color: #F0F0F0;
 }
